# elf-info

./: Cargo.toml  README.md
src/: args.rs  eh.rs  elf.rs  func.rs  header.rs  main.rs  print.rs  sections.rs  sym.rs
